# sudoku

./: CMakeLists.txt  README.md  sudoku.cpp
include/: main_window.h  sudoku_solver_logic.h  window_keyboard_detect.h
src/: main.cpp  main_window.cpp  sudoku_solver_logic.cpp  window_keyboard_detect.cpp
